feat: [US-001] - Add EnginePayloadAttributesParameter data structure
Add inclusionListTransactions field (List<String> of hex-encoded transaction
bytes) to EnginePayloadAttributesParameter with JSON serialization/deserialization
and hex format validation. Fix test constructor calls to include new parameter
and fix test data (valid even-length hex strings, null-safe list construction).
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Ralph Agent <ralph@besu.dev>